logs/bda.resultduplexer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bda'...
Listing './lib/python3.5/site-packages/bda/contentproxy'...
Listing './lib/python3.5/site-packages/bda/contentproxy/browser'...
Listing './lib/python3.5/site-packages/bda/contentproxy/browser/images'...
Listing './lib/python3.5/site-packages/bda/contentproxy/content'...
Listing './lib/python3.5/site-packages/bda/contentproxy/profiles'...
Listing './lib/python3.5/site-packages/bda/contentproxy/profiles/default'...
Listing './lib/python3.5/site-packages/bda/contentproxy/profiles/default/types'...
Listing './lib/python3.5/site-packages/bda/resultduplexer'...
Listing './lib/python3.5/site-packages/bda/resultduplexer/browser'...
Listing './lib/python3.5/site-packages/bda/resultduplexer/browser/resultduplexer'...
Compiling './lib/python3.5/site-packages/bda/resultduplexer/browser/resultduplexer/livesearch_reply.py'...
***   File "./lib/python3.5/site-packages/bda/resultduplexer/browser/resultduplexer/livesearch_reply.py", line 157
    return '\n'.join(output).encode(site_encoding)
                                                 ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/bda/resultduplexer/browser/resultduplexer/queryCatalog.py'...
***   File "./lib/python3.5/site-packages/bda/resultduplexer/browser/resultduplexer/queryCatalog.py", line 120
    return results
                 ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/bda/resultduplexer/profiles'...
Listing './lib/python3.5/site-packages/bda/resultduplexer/profiles/default'...
Listing './lib/python3.5/site-packages/bda.contentproxy-1.0.egg-info'...
Listing './lib/python3.5/site-packages/bda.resultduplexer-1.0b2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
